fixing alignment

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
     z-index: 20;
     position: fixed;
     display: flex;
-    height: 70px;
+    height: 78px;
     width: 100vw;
     justify-content: space-around;
     align-items: center;
@@ -37,7 +37,7 @@
     text-decoration: underline #932120;
   }
   .filterMenu{
-    top:150px;
+    top:159px;
     left:-300px;
     height: 60px;
     box-shadow: -2px 2px 25px rgb(56, 56, 56);
@@ -106,5 +106,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  /* messages */
+  .messages{
+    width: 453px;
+  }
+  .message{
+    margin-left: 50px;
+  }
+  .userMessage{
+    margin-left: 250px;
+
+  }
+  .subButton:hover{
+    background: white;
+    color: #d33735
   }
 }
