--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -104,7 +104,7 @@
 }
 .slide2 {
     position: relative;
-    top:27px;
+    top:-30px;
 }
 .iconButton{
     padding-left: 15px;
