--- a/src/components/maps/InitialMap.css
+++ b/src/components/maps/InitialMap.css
@@ -23,6 +23,7 @@
 .slide{
     bottom: 150px;
     box-shadow: -2px 2px 25px rgb(56, 56, 56);
+    text-align: center;
 
 
 }
